Fix instruction margin gap in Recipe View

--- a/cookbook/src/Styles/less/recipe-view.less
+++ b/cookbook/src/Styles/less/recipe-view.less
@@ -292,6 +292,7 @@
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
+      margin: 25px 0;
     }
 
     .iframe-container {
@@ -320,8 +321,7 @@
       border-radius: 25px;
       background-color: @CBblue;
       color: @CBtan;
-      padding-top: 20px;
-      padding-bottom: 15px;
+      padding: 20px 0;
       margin-bottom: 25px;
       margin-top: 20px;
 
@@ -333,7 +333,7 @@
         margin-left: 10px;
       }
       @media @phone {
-        width: 300px;
+        width: 320px;
         margin-left: 0;
       }
 
@@ -342,7 +342,7 @@
         padding-left: 10px;
         padding-right: 20px;
         line-height: 2.8rem;
-        margin-top: 10px;
+        padding: 5px;
 
         @media @phone {
           font-size: 1.4rem;
@@ -364,19 +364,19 @@
         padding-left: 10px;
         padding-right: 20px;
         line-height: 2.8rem;
-        margin-top: 10px;
+        padding: 5px;
 
         @media @phone {
-        font-size: 1.4rem;
+          font-size: 1.4rem;
         }
 
         .checkbox {
-        width: 20px;
-        margin-top: 8px;
+          width: 20px;
+          margin-top: 8px;
         }
 
         .description {
-        width: 480px;
+          width: 480px;
         }
       }
 
